fixed sorting for lessons fixed header merging on mobile fixed exceeding number of unit competencies

--- a/src/app/core/components/navbar/navbar.component.css
+++ b/src/app/core/components/navbar/navbar.component.css
@@ -46,7 +46,11 @@ img {
   .company-name {
     display: none;
   }
+  .spi-logo {
+    display: none !important;
+  }
 }
+
 
 
 .logo-connect  {
