--- a/src/app/modules/lessons/components/lesson-item/lesson-item.component.css
+++ b/src/app/modules/lessons/components/lesson-item/lesson-item.component.css
@@ -1,3 +1,4 @@
 .card {
   cursor: pointer;
+  margin-top: 10px;
 }
